Version 1.0.4
=============

* Add generic assignable effects for moveables - fire, sparks, smoke and laser / electric ignite.
* Add ability to burn enemies with FLAME_EMITTER_1 and death blocks.
* Remove TRC remnant which added HK to inventory if pistols weren't available.
* Automatically align pickups to floor surface.
* Fix legacy pickup triggers not working in certain cases.
* Fix crawl pickup not actually doing any pickups.
* Fix demigod and harpy shooting in incorrect directions.
* Fix lasersight always displaying with HK, revolver and crossbow.
* Fix rapid ammo spending in HK lasersight mode.
* Fix incorrect string IDs for item combine, HK and revolver with lasersight.
* Fix puzzle holes not swapping to puzzle done objects.
* Fix several collision and sound source issues in flipped rooms.
* Fix several pushable sound and object collision bugs.
* Fix original bug with incorrect climb up behaviour on ladders under sloped ceilings.
* Fix TR1 centaur bubble targeting.
* Fix classic rollingball and big rollingball not behaving properly.
* Fix caustics not turning off in display settings.
* Fix windowed mode not using real resolution when DPI scaling is active.
* Fix control lock not working in flyby sequences.
* Fix empty inventory when using build and play feature in TE.
* Fix several incorrect FOV reset issues.
* Changed default shatter sound to TR4_SMASH_ROCK (ie: Tomb4 default).

Lua API changes:
* Add Flow.EnableMassPickup option in Gameflow.lua to enable/disable mass pickup.
* Add level secrets property to display level-specific secret count.
* Add new Moveable functions: GetEffect, SetEffect and SetCustomEffect (for colored fire).
* Fix action key script functions not fully working in some cases.

Version 1.0.3
=============

* Add ledge jumps (Lara object must be updated with new animations to make it work).
* Allow any object slot to be used as a meshswap.
* Add OCB 1 for rollingball to make it silent.