@@ -186,7 +186,7 @@ namespace TEN::Entities::Vehicles
 		}
 		else
 		{
-			lara->Vehicle = itemNumber;
+			SetLaraVehicle(laraItem, kayakItem);
 			DoKayakMount(kayakItem, laraItem, mountType);
 		}
 	}
@@ -1061,7 +1061,7 @@ namespace TEN::Entities::Vehicles
 				laraItem->Animation.Velocity.y = -50;
 				laraItem->Animation.IsAirborne = true;
 				lara->Control.HandStatus = HandStatus::Free;
-				lara->Vehicle = NO_ITEM;
+				SetLaraVehicle(laraItem, nullptr);
 				kayak->LeftRightPaddleCount = 0;
 			}
 
@@ -1082,7 +1082,7 @@ namespace TEN::Entities::Vehicles
 				laraItem->Animation.Velocity.z = 40;
 				laraItem->Animation.Velocity.y = -50;
 				lara->Control.HandStatus = HandStatus::Free;
-				lara->Vehicle = NO_ITEM;
+				SetLaraVehicle(laraItem, nullptr);
 				kayak->LeftRightPaddleCount = 0;
 			}
 		}
